[gd_scene load_steps=7 format=3 uid="uid://doxbsa1jyx42p"]

[ext_resource type="Script" path="res://scripts/player_movement.gd" id="1_ncf80"]
[ext_resource type="Script" path="res://scripts/PlayerStatComponent.gd" id="3_60nvp"]
[ext_resource type="Script" path="res://scripts/WeaponMount.gd" id="3_rlhfk"]
[ext_resource type="Script" path="res://MainCamera.gd" id="4_gonox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qofp"]
size = Vector2(61, 68.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4xvyp"]
size = Vector2(69.5, 76)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ncf80")

[node name="SpriteAnim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(4.5, 4.5)
animation = &""
autoplay = "idle"

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.75)
shape = SubResource("RectangleShape2D_7qofp")
debug_color = Color(0.623529, 0, 0.164706, 0.419608)

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitBoxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1.25, 1)
shape = SubResource("RectangleShape2D_4xvyp")

[node name="StatComponent" type="Node2D" parent="."]
script = ExtResource("3_60nvp")

[node name="IFrameTimer" type="Timer" parent="StatComponent"]

[node name="WeaponMountHinge" type="Node2D" parent="."]

[node name="WeaponMount" type="Node2D" parent="WeaponMountHinge"]
rotation = 0.094847
script = ExtResource("3_rlhfk")

[node name="AttackCooldown" type="Timer" parent="WeaponMountHinge"]
one_shot = true

[node name="MainCamera" type="Camera2D" parent="."]
script = ExtResource("4_gonox")

[connection signal="area_entered" from="Hitbox" to="StatComponent" method="_on_hitbox_area_entered"]
[connection signal="timeout" from="StatComponent/IFrameTimer" to="StatComponent" method="_on_i_frame_timer_timeout"]
[connection signal="timeout" from="WeaponMountHinge/AttackCooldown" to="WeaponMountHinge/WeaponMount" method="_on_attack_cooldown_timeout"]
